# willow-inference-server-lite

./: Dockerfile  README.md  TODO.md  compose.yml  pyproject.toml
.github/workflow/: publish.yml
src/wis/: config.py  main.py  stt.py  tts.py
